--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<script src="./index.js"></script>
+<html>
+
+<body>
+    <div class="log"></div>
+    <script async src="./index.js"></script>
+</body>
+
+</html>
